# ecs

./: CMakeLists.txt
cmake/modules/: TestVisibilityMacros.cmake
ecs/: CMakeLists.txt
ecs/include/ecs/: World.hpp
ecs/src/: World.cpp
ecs/templates/: config.hpp.in
